Change yml file

--- a/.github/workflows/etl-workflow.yaml
+++ b/.github/workflows/etl-workflow.yaml
@@ -1,5 +1,8 @@
 name: Myanmar Earthquake ETL Pipeline
 on:
+  push:
+    branches:
+      - master
   schedule:
     - cron: '*/2 * * * *'  # Runs every 2 minutes
   workflow_dispatch:
