--- a/.github/workflows/etl-workflow.yaml
+++ b/.github/workflows/etl-workflow.yaml
@@ -4,8 +4,11 @@ on:
     branches:
       - master
   schedule:
-    - cron: '*/2 * * * *'  # Runs every 2 minutes
+    - cron: "*/2 * * * *"  # Runs every 2 minutes
   workflow_dispatch:
+
+permissions:
+  contents: write  # Required to push changes to the repository
 
 jobs:
   etl_job:
