Testing ETL Pipeline

--- a/.github/workflows/etl-workflow.yaml
+++ b/.github/workflows/etl-workflow.yaml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: "*/2 * * * *"  # Runs every 2 minutes
+    - cron: */2 * * * *  # Runs every 2 minutes
   workflow_dispatch:
 
 permissions:
