--- a/.github/workflows/etl-workflow.yaml
+++ b/.github/workflows/etl-workflow.yaml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
       - master
-  #schedule:
-    #- cron: "0 */4 * * *"  # Runs every 4th hour
+  schedule:
+    - cron: "0 */4 * * *"  # Runs every 4th hour
   workflow_dispatch:
 
 permissions:
